[metadata]
name = pyraylib
version = 1.0.0
description = Tiny local JSON database for Python, django, flask.
long_description = file: README.md
url = https://github.com/Ho011/pyraylib
author = Hussein Sarea
author_email = zzzsssx0@gmail.com
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable,
    Intended Audience :: Developers,
    Intended Audience :: System Administrators,
    License :: OSI Approved :: MIT License,
    Topic :: Database,
    Topic :: Database :: Database Engines/Servers,
    Topic :: Utilities,
    Programming Language :: Python :: 2,
    Programming Language :: Python :: 2.7,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.3,
    Programming Language :: Python :: 3.4,
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: Implementation :: CPython,
    Programming Language :: Python :: Implementation :: PyPy,
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
python_requires = >=3.5
